@@ -1,3 +1,9 @@
+2001-12-20  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (pygobject_chain_from_overridden): fix for
+	updated API.
+	(pygobject_methods): just call the method "chain".
+
 2001-12-19  James Henstridge  <james@daa.com.au>
 
 	* codegen/docgen.py (DocWriter.output_object_docs): fix for
